crates/compiler/src/tests/e2e/good/0382_if_else_evaluation/main.gom
fn main() {
    let x = 5;
    if x > 3 {
        let msg = "big: " + x.to_string();
        println(msg);
    } else {
        let msg = "small: " + x.to_string();
        println(msg);
    };
}
