crates/compiler/src/tests/e2e/bad/0053_if_missing_else_in_main/main.gom
fn main() {
    let x = 5;
    if x > 3 {
        println("big");
    };
    println("done");
}
